Fixed map button not visible in coordinate attribute (#2195)

--- a/webapp/components/survey/SurveyForm/nodeDefs/components/types/nodeDefCoordinate.scss
+++ b/webapp/components/survey/SurveyForm/nodeDefs/components/types/nodeDefCoordinate.scss
@@ -1,23 +1,20 @@
 .survey-form__node-def-coordinate {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, auto);
-  row-gap: 0.3rem;
+  display: flex;
+  flex-direction: row;
 
-  &.with-map {
-    grid-template-columns: 1fr 40px;
-  }
+  .form-items {
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
 
-  .form-item {
-    grid-template-columns: 40px 1fr;
-    grid-column: 1;
-  }
+    .form-item {
+      grid-template-columns: 40px 1fr;
 
-  .map-trigger-btn {
-    grid-row: 1;
-    grid-column: 2;
-    grid-row-start: 1;
-    grid-row-end: 3;
+      .form-input,
+      .dropdown {
+        width: 100%;
+      }
+    }
   }
 }
 
